test/arrays/bradc/twoDasTwoOneDs.good
twoDasTwoOneDs.chpl:11: error: unresolved access of '[domain(2,int,false)] real' by '(1)'
